# ocel-mine

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
docs/adr/: 0001-scope-and-semantics.md
examples/: alpha.rs  clusters.rs  dfg.rs  heuristics.rs  inductive.rs  lead_times.rs  noise.rs  replay.rs  stats.rs  variants.rs
src/: alpha.rs  cases.rs  cluster.rs  dfg.rs  heuristics.rs  inductive.rs  lib.rs  metrics.rs  noise.rs  powl.rs  powl_replay.rs  precision.rs  replay.rs  stats.rs  test_util.rs  trace.rs  variants.rs
tests/: noise.rs  powl.rs
