[package]
name = "ocel-mine"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-mine"
description = "Fast object-centric process mining analysis for OCEL 2.0 event logs"
keywords = ["ocel", "process-mining", "event-log"]
categories = ["science", "data-structures"]

[dependencies]
ocel = "0.1.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
