[package]
name = "ocel-mine"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/katsut/ocel-mine"
documentation = "https://docs.rs/ocel-mine"
readme = "README.md"
description = "Object-centric process mining for OCEL 2.0: variants, DFG/OC-DFG, discovery (alpha, inductive, heuristics, POWL), replay fitness, precision, lead times"
keywords = ["ocel", "process-mining", "event-log", "petri-net"]
categories = ["science", "algorithms"]
exclude = ["docs/"]

[dependencies]
ocel = "0.1.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
strip = true
